--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
-2captcha-python
+2captcha-python==1.5.0
 aiohappyeyeballs==2.4.3
 aiohttp==3.10.10
 aiosignal==1.3.1
+anyio==4.6.2.post1
 attrs==24.2.0
 certifi==2024.8.30
 chardet==3.0.4
 charset-normalizer==3.4.0
 frozenlist==1.5.0
-h11==0.9.0
+h11==0.14.0
 h2==3.2.0
 hpack==3.0.0
 hstspreload==2024.10.1
-httpcore==0.9.1
-httpx==0.13.3
+httpcore==1.0.7
+httpx==0.27.2
 hyperframe==5.2.0
 idna==2.10
 multidict==6.1.0
@@ -22,6 +23,7 @@ propcache==0.2.0
 PySocks==1.7.1
 pyTelegramBotAPI==4.23.0
 python-dotenv==1.0.1
+python-telegram-bot==21.7
 PyVirtualDisplay==3.0
 requests==2.32.3
 rfc3986==1.5.0
