--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,12 @@ aiohttp==3.10.10
 aiosignal==1.3.1
 anyio==4.6.2.post1
 attrs==24.2.0
+blinker==1.9.0
 certifi==2024.8.30
 chardet==3.0.4
 charset-normalizer==3.4.0
+click==8.1.7
+Flask==3.1.0
 frozenlist==1.5.0
 h11==0.14.0
 h2==3.2.0
@@ -16,6 +19,9 @@ httpcore==1.0.7
 httpx==0.27.2
 hyperframe==5.2.0
 idna==2.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==3.0.2
 multidict==6.1.0
 outcome==1.3.0.post0
 packaging==24.1
@@ -36,5 +42,6 @@ trio-websocket==0.11.1
 typing_extensions==4.12.2
 urllib3==2.2.3
 websocket-client==1.8.0
+Werkzeug==3.1.3
 wsproto==1.2.0
 yarl==1.17.1
